pred upravou recording

--- a/Web4/BlendedAPI/Todo.txt
+++ b/Web4/BlendedAPI/Todo.txt
@@ -2,3 +2,7 @@
 Lesson exercise:
 - cviceni pouze s Recorderem - nechape se jako aktivni ale jen pasivni.
 - reset cviceni, reset lekce
+
+
+Cache:
+- cviceni i modul nejsou pod produktem ale mimo nej (neobsahuji user data, jsou spolecna pro vice users)
