--- a/Web4/BlendedAPI/Todo.txt
+++ b/Web4/BlendedAPI/Todo.txt
@@ -1,10 +1,12 @@
-﻿Excel exports
-Vyhodnoceni testů
+﻿testovací stránka pro nahrávání a přehrávání
+Excel exports
 Barvicky v kontrolkach dialogu
-texty do potvrzovacich dialogu
+texty do potvrzovacich dialogu a do nápověd
 
 Lesson exercise:
 - reset cviceni, reset lekce
 
 Cache:
 - cviceni i modul nejsou pod produktem ale mimo nej (neobsahuji user data, jsou spolecna pro vice users)
+
+LM konzole pro založení školy
