--- a/Web4/BlendedAPI/Todo.txt
+++ b/Web4/BlendedAPI/Todo.txt
@@ -1,6 +1,9 @@
 ﻿testovací stránka pro nahrávání a přehrávání
 Excel exports
 texty do potvrzovacich dialogu a do nápověd
+jak s klíči pro LM lektory šablony č. 3
+
+vyhodit DEL ladici akce (2x)
 
 Lesson exercise:
 - reset cviceni, reset lekce
