pred web4 webem

--- a/DesignTimeLib/Install.txt
+++ b/DesignTimeLib/Install.txt
@@ -4,6 +4,8 @@ Install-Package YUICompressor.NET
 Install-Package Newtonsoft.Json -Version 7.0.1
 Install-Package HtmlAgilityPack
 
+Install-Package EntityFramework.MicrosoftSqlServer -Pre
 Install-Package EntityFramework.Commands -Pre
+Install-Package EntityFramework.SQLite -Pre
 Install-Package WindowsAzure.Storage -Version 6.1.0
 Install-Package Microsoft.AspNet.WebApi (kvuli generaci TypeScript proxies z popisu services)
