--- a/Web4/Install.txt
+++ b/Web4/Install.txt
@@ -1,4 +1,8 @@
 ﻿Install-Package Newtonsoft.Json -Version 7.0.1
 
+Install-Package EntityFramework.MicrosoftSqlServer -Pre
 Install-Package EntityFramework.Commands -Pre
-Install-Package Microsoft.AspNet.WebApi
+Install-Package EntityFramework.SQLite -Pre
+Install-Package Microsoft.AspNet.WebApi 
+
+Install-Package Microsoft.AspNet.Cors -Pre
